OV-DINO: inference

--- a/OV-DINO/ovdino_inference.ipynb
+++ b/OV-DINO/ovdino_inference.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "074d6e74",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "'1.26.4'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3b81cf05",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
       "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
       "/home/pyml/anaconda3/envs/ovdino/lib/python3.10/site-packages/huggingface_hub/file_download.py:945: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -167,13 +167,12 @@
     "model.to(cfg.train.device)\n",
     "checkpointer = DetectionCheckpointer(model)\n",
     "checkpointer.load(cfg.train.init_checkpoint)\n",
-    "model.eval();\n",
-    "\n"
+    "model.eval();\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d008232d",
    "metadata": {},
    "outputs": [
@@ -187,6 +186,98 @@
      ]
     }
    ],
+   "source": [
+    "# ---------------------------------------------------------------------\n",
+    "# 2. Prepare category names (open vocabulary)\n",
+    "# ---------------------------------------------------------------------\n",
+    "raw_categories = [\"plant\", \"vase\"]\n",
+    "category_names = [clean_words_or_phrase(c) for c in raw_categories]\n",
+    "\n",
+    "# ---------------------------------------------------------------------\n",
+    "# 3. Read and preprocess the image\n",
+    "# ---------------------------------------------------------------------\n",
+    "image_path = \"../samples/plants.jpg\"\n",
+    "# Load BGR image using OpenCV\n",
+    "bgr_image = cv2.imread(image_path, cv2.IMREAD_COLOR)\n",
+    "if bgr_image is None:\n",
+    "    raise FileNotFoundError(f\"Unable to read image: {image_path}\")\n",
+    "\n",
+    "# The model expects an RGB image; convert if necessary\n",
+    "if cfg.model.input_format == \"RGB\":\n",
+    "    rgb_image = bgr_image[:, :, ::-1]\n",
+    "else:\n",
+    "    rgb_image = bgr_image\n",
+    "\n",
+    "# Record the original dimensions before resizing\n",
+    "height, width = rgb_image.shape[:2]\n",
+    "\n",
+    "# Apply the same resizing used by the demo (shortest edge=800, max size=1333)\n",
+    "resizer = T.ResizeShortestEdge([800, 800], 1333)\n",
+    "resized_image = resizer.get_transform(rgb_image).apply_image(rgb_image)\n",
+    "\n",
+    "# Convert to CHW tensor (float32) as expected by detectron2\n",
+    "tensor_image = torch.Tensor(resized_image.astype(\"float32\").transpose(2, 0, 1))\n",
+    "\n",
+    "# ---------------------------------------------------------------------\n",
+    "# 4. Build the input dict and run inference\n",
+    "# ---------------------------------------------------------------------\n",
+    "inputs = {\n",
+    "    \"image\": tensor_image,\n",
+    "    \"height\": height,\n",
+    "    \"width\": width,\n",
+    "    \"category_names\": category_names,\n",
+    "}\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    predictions = model([inputs])[0]\n",
+    "    # Filter by confidence if desired\n",
+    "    predictions = filter_predictions_with_confidence(predictions, threshold=0.5)\n",
+    "\n",
+    "# ---------------------------------------------------------------------\n",
+    "# 5. Inspect the results\n",
+    "# ---------------------------------------------------------------------\n",
+    "if \"instances\" in predictions:\n",
+    "    instances = predictions[\"instances\"].to(torch.device(\"cpu\"))\n",
+    "    for i in range(len(instances)):\n",
+    "        bbox = instances.pred_boxes.tensor[i].tolist()  # [x1,y1,x2,y2]\n",
+    "        score = instances.scores[i].item()\n",
+    "        # pred_classes corresponds to index in category_names\n",
+    "        class_idx = instances.pred_classes[i].item()\n",
+    "        class_name = category_names[class_idx] if class_idx < len(category_names) else str(class_idx)\n",
+    "        print(f\"{class_name}: score={score:.3f}, box={bbox}\")\n",
+    "else:\n",
+    "    print(\"No instances detected.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2d6a11fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'instances': Instances(num_instances=3, image_height=1137, image_width=1068, fields=[pred_boxes: Boxes(tensor([[ 429.2465,   76.3726,  790.2409,  796.6929],\n",
+       "         [ 131.5755,  480.7573,  464.2589,  900.4660],\n",
+       "         [ 462.1735,  497.2107,  786.7843, 1088.8698]], device='cuda:0')), scores: tensor([0.5674, 0.5317, 0.5174], device='cuda:0'), pred_classes: tensor([0, 0, 1], device='cuda:0')])}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2980a51",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
