OV-DINO: wget -p => -P

--- a/OV-DINO/ovdino_inference.ipynb
+++ b/OV-DINO/ovdino_inference.ipynb
@@ -87,7 +87,7 @@
     "## Download model\n",
     "\n",
     "```bash\n",
-    "wget https://huggingface.co/hao9610/OV-DINO/resolve/main/ovdino_swint_ogc-coco50.2_lvismv40.1_lvis32.9.pth  -p OVDINO_repo/inits/\n",
+    "wget https://huggingface.co/hao9610/OV-DINO/resolve/main/ovdino_swint_ogc-coco50.2_lvismv40.1_lvis32.9.pth  -P OVDINO_repo/inits/\n",
     "```"
    ]
   },
