CogVLM: initial notebook

--- a/CogVLM/cogvlm_inference.ipynb
+++ b/CogVLM/cogvlm_inference.ipynb
@@ -8,6 +8,14 @@
     "CogVLM\n",
     "====\n",
     "\n",
+    "**CogVLM: Visual Expert for Pretrained Language Models**\n",
+    "\n",
+    " * Paper: https://arxiv.org/pdf/2311.03079\n",
+    "\n",
+    "![CogVLM Arch](../assets/cogvlm_arch.jpg)\n",
+    "\n",
+    "## Installation\n",
+    "\n",
     "```bash\n",
     "conda create -n cogvlm python=3.10 -y\n",
     "conda activate cogvlm\n",
@@ -35,9 +43,8 @@
    "id": "01487f00",
    "metadata": {},
    "source": [
-    "## Installation\n",
-    "\n",
-    "Requires transformers 4.36.2\n",
+    "* Note:\n",
+    "Requires transformers 4.36.2 (newer versions won't work)\n",
     "```bash\n",
     "pip install --force-reinstall transformers==4.36.2\n",
     "```"
