--- a/CogVLM/cogvlm_inference.ipynb
+++ b/CogVLM/cogvlm_inference.ipynb
@@ -52,21 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3e93b498",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pyml/anaconda3/envs/cogvlm/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/pyml/anaconda3/envs/cogvlm/lib/python3.10/site-packages/transformers/utils/generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import argparse\n",
     "from typing import Optional\n",
@@ -78,7 +67,7 @@
     "use_bf16 = False\n",
     "use_fp16 = True\n",
     "quant = True\n",
-    "device = \"cpu\" #\"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# Choose appropriate floating point type\n",
     "if use_bf16 and not use_fp16:\n",
@@ -100,11 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pyml/anaconda3/envs/cogvlm/lib/python3.10/site-packages/huggingface_hub/file_download.py:945: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "/home/pyml/anaconda3/envs/cogvlm/lib/python3.10/site-packages/transformers/utils/generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "Loading checkpoint shards:  25%|██▌       | 2/8 [00:03<00:11,  1.91s/it]"
+      "Loading checkpoint shards:  38%|███▊      | 3/8 [00:04<00:06,  1.35s/it]"
      ]
     }
    ],
