SAN: load model

--- a/SAN/san_inference.ipynb
+++ b/SAN/san_inference.ipynb
@@ -81,8 +81,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6bae0f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:fvcore.common.config:Loading config SAN_repo/configs/Base-coco-stuff-164K-171.yaml with yaml.unsafe_load. Your machine may be at risk if the file contains malicious content.\n",
+      "WARNING:timm.models._builder:No pretrained configuration specified for vit_tiny_patch16_224_in21k model. Using a default. Please add a config to the model pretrained_cfg registry or pass explicitly.\n",
+      "/home/pyml/git_vmirly/GenAI-Hub/SAN/SAN_repo/san/model/side_adapter/timm_wrapper.py:24: UserWarning: Unused kwargs are provided:{'dynamic_img_pad': False}.\n",
+      "  warnings.warn(f\"Unused kwargs are provided:{kwargs}.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from:  /home/pyml/.cache/huggingface/hub/models--Mendel192--san/snapshots/0d24a51312b517e86044f845185d09002d032443/san_vit_b_16.pth\n",
+      "Loaded model from:  /home/pyml/.cache/huggingface/hub/models--Mendel192--san/snapshots/0d24a51312b517e86044f845185d09002d032443/san_vit_b_16.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sys.path.append(\"SAN_repo\")\n",
+    "from predict import Predictor, model_cfg\n",
+    "\n",
+    "\n",
+    "# Choose the ViT-B/16 model; the config and weight names come from predict.py.\n",
+    "model_key = \"san_vit_b_16\"\n",
+    "config_file = model_cfg[model_key][\"config_file\"]\n",
+    "model_path = model_cfg[model_key][\"model_path\"]\n",
+    "config_file = \"SAN_repo/\" + config_file\n",
+    "\n",
+    "# Build the predictor.  This will download the weights from HuggingFace on first use.\n",
+    "predictor = Predictor(config_file=config_file, model_path=model_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1204bc2",
    "metadata": {},
    "outputs": [],
    "source": []
