Seg-Zero: preprocess the inputs

--- a/SegZero/segzero_inference.ipynb
+++ b/SegZero/segzero_inference.ipynb
@@ -79,9 +79,7 @@
    "outputs": [],
    "source": [
     "reasoning_model_path = \"SegZero_repo/pretrained_models/VisionReasoner-7B\"\n",
-    "segmentation_model_path = \"facebook/sam2-hiera-large\"\n",
-    "text = \"Which plant is taller?\"\n",
-    "image_path = \"../samples/plants.jpg\""
+    "segmentation_model_path = \"facebook/sam2-hiera-large\""
    ]
   },
   {
@@ -134,8 +132,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "52dd73ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original image size: 1068 x 1137\n",
+      "x_factor: 1.2714285714285714 y_factor: 1.3535714285714286\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Which plant is taller?\"\n",
+    "image_path = \"../samples/plants.jpg\"\n",
+    "\n",
+    "image = PILImage.open(image_path).convert(\"RGB\")\n",
+    "original_width, original_height = image.size\n",
+    "resize_size = 840\n",
+    "x_factor, y_factor = original_width/resize_size, original_height/resize_size\n",
+    "print(f\"Original image size: {original_width} x {original_height}\")\n",
+    "print(\"x_factor:\", x_factor, \"y_factor:\", y_factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e9a769c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "messages = []\n",
+    "message = [{\n",
+    "    \"role\": \"user\",\n",
+    "    \"content\": [\n",
+    "    {\n",
+    "        \"type\": \"image\", \n",
+    "        \"image\": image.resize((resize_size, resize_size), PILImage.BILINEAR)\n",
+    "    },\n",
+    "    {   \n",
+    "        \"type\": \"text\",\n",
+    "        \"text\": QUESTION_TEMPLATE.format(\n",
+    "            Question=text.lower().strip(\".\"),\n",
+    "            Answer=(\n",
+    "                \"[{\\\"bbox_2d\\\": [10,100,200,210], \\\"point_2d\\\": [30,110]}, {\\\"bbox_2d\\\": \"\n",
+    "                \"[225,296,706,786], \\\"point_2d\\\": [302,410]}]\"\n",
+    "            )\n",
+    "        )    \n",
+    "    }\n",
+    "]\n",
+    "}]\n",
+    "messages.append(message)\n",
+    "\n",
+    "# Preparation for inference\n",
+    "text = [processor.apply_chat_template(msg, tokenize=False, add_generation_prompt=True) for msg in messages]\n",
+    "\n",
+    "#pdb.set_trace()\n",
+    "image_inputs, video_inputs = process_vision_info(messages)\n",
+    "#pdb.set_trace()\n",
+    "inputs = processor(\n",
+    "    text=text,\n",
+    "    images=image_inputs,\n",
+    "    videos=video_inputs,\n",
+    "    padding=True,\n",
+    "    return_tensors=\"pt\",\n",
+    ")\n",
+    "inputs = inputs.to(\"cuda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d287807a",
    "metadata": {},
    "outputs": [],
    "source": []
