Seg-Zero: inference (step 1)

--- a/SegZero/segzero_inference.ipynb
+++ b/SegZero/segzero_inference.ipynb
@@ -205,8 +205,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "b7c92458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_bbox_points_think(output_text, x_factor, y_factor):\n",
+    "    json_match = re.search(r'<answer>\\s*(.*?)\\s*</answer>', output_text, re.DOTALL)\n",
+    "    if json_match:\n",
+    "        data = json.loads(json_match.group(1))\n",
+    "        pred_bboxes = [[\n",
+    "            int(item['bbox_2d'][0] * x_factor + 0.5),\n",
+    "            int(item['bbox_2d'][1] * y_factor + 0.5),\n",
+    "            int(item['bbox_2d'][2] * x_factor + 0.5),\n",
+    "            int(item['bbox_2d'][3] * y_factor + 0.5)\n",
+    "        ] for item in data]\n",
+    "        pred_points = [[\n",
+    "            int(item['point_2d'][0] * x_factor + 0.5),\n",
+    "            int(item['point_2d'][1] * y_factor + 0.5)\n",
+    "        ] for item in data]\n",
+    "    \n",
+    "    think_pattern = r'<think>([^<]+)</think>'\n",
+    "    think_match = re.search(think_pattern, output_text)\n",
+    "    think_text = \"\"\n",
+    "    if think_match:\n",
+    "        think_text = think_match.group(1)\n",
+    "    \n",
+    "    return pred_bboxes, pred_points, think_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "d287807a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<think> To determine which plant is taller, I need to compare the height of the plants relative to their pots. The plant on the right appears to have a taller stem and larger leaves, suggesting it is taller than the plant on the left. The pots themselves are the same height, so the difference in height is due to the plants themselves.</think>\n",
+      "<answer>[{\"bbox_2d\": [337,56,620,587], \"point_2d\": [510,280]}, {\"bbox_2d\": [107,354,364,664], \"point_2d\": [218,470]}]</answer>\n",
+      "[[648, 379], [277, 636]] 2\n",
+      "Thinking process:   To determine which plant is taller, I need to compare the height of the plants relative to their pots. The plant on the right appears to have a taller stem and larger leaves, suggesting it is taller than the plant on the left. The pots themselves are the same height, so the difference in height is due to the plants themselves.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inference: Generation of the output\n",
+    "generated_ids = reasoning_model.generate(\n",
+    "    **inputs, use_cache=True, max_new_tokens=1024, do_sample=False\n",
+    ")\n",
+    "\n",
+    "generated_ids_trimmed = [\n",
+    "    out_ids[len(in_ids):] for in_ids, out_ids in zip(inputs.input_ids, generated_ids)\n",
+    "]\n",
+    "output_text = processor.batch_decode(\n",
+    "    generated_ids_trimmed, skip_special_tokens=True, clean_up_tokenization_spaces=False\n",
+    ")\n",
+    "\n",
+    "print(output_text[0])\n",
+    "# pdb.set_trace()\n",
+    "bboxes, points, think = extract_bbox_points_think(output_text[0], x_factor, y_factor)\n",
+    "print(points, len(points))\n",
+    "\n",
+    "print(\"Thinking process: \", think)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80fce37c",
    "metadata": {},
    "outputs": [],
    "source": []
