--- a/SAM-3/sam3_inference.ipynb
+++ b/SAM-3/sam3_inference.ipynb
@@ -22,6 +22,28 @@
    "cell_type": "markdown",
    "id": "46b1b64b",
    "metadata": {},
+   "source": [
+    "## Installation\n",
+    "\n",
+    "```bash\n",
+    "conda create -n sam3 python=3.12 -y\n",
+    "conda activate sam3\n",
+    "\n",
+    "# install torch\n",
+    "pip install torch==2.7.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126\n",
+    "\n",
+    "git clone https://github.com/facebookresearch/sam3.git SAM3_repo\n",
+    "cd SAM3_repo\n",
+    "pip install -e .\n",
+    "\n",
+    "pip install einops decord pycocotools\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67eb4b26",
+   "metadata": {},
    "source": []
   }
  ],
