--- a/SAM-3/sam3_inference.ipynb
+++ b/SAM-3/sam3_inference.ipynb
@@ -37,19 +37,63 @@
     "pip install -e .\n",
     "\n",
     "pip install einops decord pycocotools\n",
+    "\n",
+    "pip install matplotlib\n",
     "```"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "67eb4b26",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b7d222d8",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from PIL import Image\n",
+    "from sam3.model_builder import build_sam3_image_model\n",
+    "from sam3.model.sam3_image_processor import Sam3Processor\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "60afa9de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the model (using the build method)\n",
+    "model = build_sam3_image_model()\n",
+    "processor = Sam3Processor(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8806071",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "sam3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
